--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,5 @@
 <main>
   <p>home works!</p>
+  <app-greeting [message]="'hello boyyyy'"/>
+  <input type="text" (keyup)="keyUpHandler($event)">
 </main>
