--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <main>
   <p>home works!</p>
   <app-greeting [message]="'hello boyyyy'"/>
-  <input type="text" (keyup)="keyUpHandler($event)">
+  <input placeholder="type something..." type="text" (keyup)="keyUpHandler($event)">
+  <app-counter></app-counter>
 </main>
