--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,4 +3,5 @@
   <app-greeting [message]="'hello boyyyy'"/>
   <input placeholder="type something..." type="text" (keyup)="keyUpHandler($event)">
   <app-counter></app-counter>
+  <router-outlet></router-outlet>
 </main>
